Ajustado envio de Cte para a versão 4.0